<resources>
    <string name="app_name">Desafio1_DSM</string>
    <string name="Bienvenido">Bienvenido/a</string>
    <string name="Ejercicio1">Ejercicio1: Promedio del estudiante</string>
    <string name="Ejercicio2">Ejercicio2: Descuentos al salario</string>
    <string name="Ejercicio3">Ejercicio3: Calculadora básica</string>
    <string name="nombreEstudiante">Nombre del estudiante:</string>
    <string name="Nota1">Nota 1:</string>
    <string name="Nota2">Nota 2:</string>
    <string name="Nota3">Nota 3:</string>
    <string name="Nota4">Nota 4:</string>
    <string name="Nota5">Nota 5:</string>
    <string name="calcularPromedio">Calcular promedio</string>
    <string name="nombreEmpleado">Nombre del empleado</string>
    <string name="salarioBase">Salario base</string>
    <string name="calcularSalario">Carlcular salario</string>
    <string name="errorSalario">Ingrese un salario valido</string>
    <string name="resultadoSalario">
                                    Empleado: %1$s
                                    Salario bruto: %2$.2f
                                    AFP: %3$.2f
                                    ISSS: %4$.2f
                                    Renta: %5$.2f
                                    Salario neto: %6$.2f
    </string>
    <string name="Numero1">Numero 1</string>
    <string name="Numero2">Numero 2</string>
    <string name="Sum">Suma</string>
    <string name="Res">Resta</string>
    <string name="Multi">Multiplicación</string>
    <string name="Div">División</string>
    <string name="Expo">Exponente</string>
    <string name="Raiz">Raíz cuadrada</string>
    <string name="errorDivision">No se puede dividir entre cero</string>
    <string name="resultadoCalc">Resultado: %1$.2f</string>
</resources>