<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_global"
    android:gravity="center"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/editNumero1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Numero1"
        android:inputType="numberDecimal"
        android:textColorHint="@color/colorTextTitle"
        android:textColor="@color/colorTextTitle"
        android:layout_marginBottom="@dimen/marginButton"/>

    <EditText
        android:id="@+id/editNumero2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Numero2"
        android:inputType="numberDecimal"
        android:textColorHint="@color/colorTextTitle"
        android:textColor="@color/colorTextTitle"
        android:layout_marginBottom="@dimen/marginButton"/>

    <!--los botones como iconos -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btnSuma"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_suma"
            android:contentDescription="@string/Sum"/>

        <ImageButton
            android:id="@+id/btnResta"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_resta"
            android:contentDescription="@string/Res"/>

        <ImageButton
            android:id="@+id/btnMultiplicacion"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_multi"
            android:contentDescription="@string/Multi"/>

        <ImageButton
            android:id="@+id/btnDivision"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_div"
            android:contentDescription="@string/Div"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btnExponente"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_expo"
            android:contentDescription="@string/Expo"/>

        <ImageButton
            android:id="@+id/btnRaiz"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_raiz"
            android:contentDescription="@string/Raiz"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtResultadoCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/textTitle"
        android:textColor="@color/colorTextTitle"/>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Volver al menú"
        android:layout_marginTop="16dp"/>
</LinearLayout>