<?xml version="1.0" encoding="utf-8"?>
<!--Este seria el contenedor donde sera vertical y centrado la orientacion
   en el orientation y el gravity-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding_global"> <!--en este llamamos al pading que definimos en
    la carpeta de dimens en recursos con ese nombre-->

    <!--el texto de la bienvenida que esta guardado en los strings y aqui lo llamamos-->
    <TextView
        android:id="@+id/txtBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenido"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_marginBottom="32dp" />

    <!--Los botones que ocuparemos -->
    <!--btnEjercicio1-->
    <Button
        android:id="@+id/btnEjercicio1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ejercicio1"
        android:layout_marginBottom="16dp" />
    
    <!--btnEjercicio2-->
    <Button
        android:id="@+id/btnEjercicio2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ejercicio2"
        android:layout_marginBottom="16dp" />

    <!--btnEjercicio3-->
    <Button
        android:id="@+id/btnEjercicio3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ejercicio3" />

</LinearLayout>