<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_global"
    android:gravity="center"
    android:background="@color/colorBackground">

    <!--Para el nombre del empleado-->
    <EditText
        android:id="@+id/editEmpleado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombreEmpleado"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorTextTitle"
        android:textColor="@color/colorTextTitle"
        android:layout_marginBottom="@dimen/marginButton"/>

    <EditText
        android:id="@+id/editSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salarioBase"
        android:inputType="numberDecimal"
        android:textColorHint="@color/colorTextTitle"
        android:textColor="@color/colorTextTitle"
        android:layout_marginBottom="@dimen/marginButton"/>

    <Button
        android:id="@+id/btnCalcularSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcularSalario"
        android:backgroundTint="@color/colorButtonPrimary"
        android:textColor="@color/colorTextTitle"
        android:layout_marginBottom="@dimen/marginButton"/>

    <TextView
        android:id="@+id/txtResultadoSalario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/textTitle"
        android:textColor="@color/colorTextTitle"/>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Volver al menú"
        android:layout_marginTop="16dp"/>
</LinearLayout>